plugins/mermaid/plugin/src/test/resources/intention/gitgraph/merge_using_existing_id.mermaid
gitGraph
  commit id: "1-111"
  branch testBranch
  commit id: "2-222"
  commit id: "3-333"
  checkout main
  merge testBranch id: "<error descr="Commit id already exists">1-111</error>"